--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body onload="init()">
+    <input type="text" id="copy-text" value="aaaa" style="display: none;">
     <header class="main-header flex justify-space-between align-flex-end">
         <div class="main-logo">TravelTip</div>
         <nav class="main-nav flex ">
